fix: prevent puzzle menu from overlapping with info button

--- a/public/styles/components/menu-section.css
+++ b/public/styles/components/menu-section.css
@@ -4,8 +4,8 @@
      align-items: center;
      justify-content: center;
      flex-wrap: wrap;
-     max-height: calc(100vh - 7.5rem);
-     max-height: calc(100dvh - 7.5rem);
+     max-height: calc(100vh - 10.5rem);
+     max-height: calc(100dvh - 10.5rem);
      overflow: auto;
      scrollbar-width: none;
  }
@@ -18,19 +18,19 @@
  }
 
  .fixed-size {
-     max-height: 5rem;
-     overflow: auto;
+     max-height: 2.25rem;
      min-width: 2.25rem;
+     overflow: auto;
  }
 
  .fixed-position {
      position: fixed;
+     top: 4.25rem;
      /* mix-blend-mode: difference; */
  }
 
  .row-container {
      align-items: center;
-     top: 1rem;
      overflow: auto;
      padding: 0 1em;
  }
